Deconstructing in the rendererParams - Style fixing - Line separation for multiple props

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -43,7 +43,7 @@
     <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.41.0/mapbox-gl.css' rel='stylesheet' />
     <!-- End -->
 
-    <script>s
+    <script>
         document.querySelectorAll('a[href^="#"]').forEach(anchor => {
             anchor.addEventListener('click', function (e) {
                 e.preventDefault();
